--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MyCalculator</string>
     <string name="hint">Что нужно посчитать?</string>
+    <string name="theme_button">Сменим тему!</string>
 
     <string name="button1">1</string>
     <string name="button2">2</string>
