--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="button_cancel">C</string>
     <string name="button_dot">.</string>
     <string name="button_eql">=</string>
+    <string name="return_number">ВЕРНУТЬ ЧИСЛО</string>
 
 </resources>
